[package]
name = "rcn"
version = "1.0.0"
edition = "2021"
authors = ["Abdogouhmad <gouhmada@gmail.com>"]
description = "A CLI tool to generate React components with the necessary files."
readme = "README.md"
repository = "https://github.com/abdogouhmad/rcn"

[dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
